# AIplatform_for_marketplace_analytics

./: .dockerignore  .env.example  .env.integration  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.integration.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py  pg_enum.py
app/: __init__.py  main.py
deploy/: smtp.credentials.example
docker/: nginx.conf  nginx.integration.conf
docs/: PR_P0_ETL_STABILIZATION.md  README.md
frontend/: .env.local  .env.local.example  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.cjs  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
migrations_support/: __init__.py  pg_enum.py
reports/: archetype_validation.json  multi_seller_discovery.json  multi_seller_replay.json  phase_621_migration_audit.json  phase_622_insight_audit.json  phase_630_inventory_audit.json
scripts/: ai_recommendation_quality_audit.py  archetype_audit_runner.py  archetype_validation.py  architecture_governance_check.py  backfill_ai_recommendations.py  backfill_report_periods.py  bootstrap_integration_data.py  cleanup-frontend-artifacts.sh  create_mvp_test_user.py  dedupe_ai_recommendations.py  deploy-frontend.sh  dr_restore_drill.sh  entrypoint-migrate.sh  etl_pipeline_validation.py  init_schema.sql  install-frontend-ops.sh  integration-reset.ps1  integration-test.ps1  integration-up.ps1  multi_seller_replay.py  mvp_readiness_checks.sh  ops_readiness_checks.sh  (+24 more)
(+829 files in other folders)
