[project]
name = "marketplace-analytics-api"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"alembic/**" = ["E501"]
"app/parsers/**" = ["E501"]
"app/etl/**" = ["E501"]
"app/operations/**" = ["E501"]
"app/services/**" = ["E501"]
"app/core/**" = ["E501"]
"app/runtime/**" = ["E501"]
"app/ai/**" = ["E501"]
"app/api/**" = ["E501"]
"app/models/**" = ["E501"]
"app/domain/**" = ["E501"]
"app/schemas/**" = ["E501"]
"scripts/**" = ["E501", "E402"]
"demos/**" = ["E501", "E402"]
"alembic/env.py" = ["E402"]
"tests/support/**" = ["UP047"]
"app/ai/providers/**" = ["UP047"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
files = ["app", "tests"]
exclude = ["alembic/versions/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: requires PostgreSQL test database",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/etl/pipeline.py"]
